minio/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  # This name uniquely identifies the Deployment
  name: minio
  labels:
    app: minio
spec:
  template:
    metadata:
      labels:
        # Label is used as selector in the service.
        app: minio
    spec:
      containers:
      - name: minio
        image: minio/minio
        args:
        - server
        - /data
        ports:
        - containerPort: 9000
        volumeMounts:
        - name: storage # must match the volume name, above
          mountPath: "/data"
      volumes:
      - name: storage
        hostPath:
          type: DirectoryOrCreate
          path: /data/minio
