minio/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: minio
spec:
  tls:
  - hosts:
    - minio.nfsmith.ca
    secretName: tls-certs
  rules:
  - host: minio.nfsmith.ca
    http:
      paths:
      - path: /
        backend:
          serviceName: minio
          servicePort: 9000
